// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Change Mining Fees should render with custom props 1`] = `
<SafeAreaViewComponent>
  <Component>
    <Gradient
      style={
        Object {
          "height": 44,
          "position": "absolute",
          "width": "100%",
        }
      }
    />
    <Component
      style={
        Object {
          "paddingHorizontal": 30.788732394366196,
          "paddingVertical": 30.788732394366196,
          "position": "relative",
          "top": 101.60281690140846,
        }
      }
    >
      <Component
        style={
          Object {
            "height": 67.73521126760564,
          }
        }
      >
        <RadioButton
          isSelected={false}
          label="High"
          onPress={[Function]}
          value="high"
        />
      </Component>
      <Component
        style={
          Object {
            "height": 67.73521126760564,
          }
        }
      >
        <RadioButton
          isSelected={false}
          label="Standard"
          onPress={[Function]}
          value="standard"
        />
      </Component>
      <Component
        style={
          Object {
            "height": 67.73521126760564,
          }
        }
      >
        <RadioButton
          isSelected={false}
          label="Low"
          onPress={[Function]}
          value="low"
        />
      </Component>
      <Connect(CustomFees)
        handlePress={[Function]}
        sourceWallet={Object {}}
      />
    </Component>
  </Component>
</SafeAreaViewComponent>
`;

exports[`Change Mining Fees should render with high props 1`] = `
<SafeAreaViewComponent>
  <Component>
    <Gradient
      style={
        Object {
          "height": 44,
          "position": "absolute",
          "width": "100%",
        }
      }
    />
    <Component
      style={
        Object {
          "paddingHorizontal": 30.788732394366196,
          "paddingVertical": 30.788732394366196,
          "position": "relative",
          "top": 101.60281690140846,
        }
      }
    >
      <Component
        style={
          Object {
            "height": 67.73521126760564,
          }
        }
      >
        <RadioButton
          isSelected={true}
          label="High"
          onPress={[Function]}
          value="high"
        />
      </Component>
      <Component
        style={
          Object {
            "height": 67.73521126760564,
          }
        }
      >
        <RadioButton
          isSelected={false}
          label="Standard"
          onPress={[Function]}
          value="standard"
        />
      </Component>
      <Component
        style={
          Object {
            "height": 67.73521126760564,
          }
        }
      >
        <RadioButton
          isSelected={false}
          label="Low"
          onPress={[Function]}
          value="low"
        />
      </Component>
      <Connect(CustomFees)
        handlePress={[Function]}
        sourceWallet={Object {}}
      />
    </Component>
  </Component>
</SafeAreaViewComponent>
`;

exports[`Change Mining Fees should render with low props 1`] = `
<SafeAreaViewComponent>
  <Component>
    <Gradient
      style={
        Object {
          "height": 44,
          "position": "absolute",
          "width": "100%",
        }
      }
    />
    <Component
      style={
        Object {
          "paddingHorizontal": 30.788732394366196,
          "paddingVertical": 30.788732394366196,
          "position": "relative",
          "top": 101.60281690140846,
        }
      }
    >
      <Component
        style={
          Object {
            "height": 67.73521126760564,
          }
        }
      >
        <RadioButton
          isSelected={false}
          label="High"
          onPress={[Function]}
          value="high"
        />
      </Component>
      <Component
        style={
          Object {
            "height": 67.73521126760564,
          }
        }
      >
        <RadioButton
          isSelected={false}
          label="Standard"
          onPress={[Function]}
          value="standard"
        />
      </Component>
      <Component
        style={
          Object {
            "height": 67.73521126760564,
          }
        }
      >
        <RadioButton
          isSelected={true}
          label="Low"
          onPress={[Function]}
          value="low"
        />
      </Component>
      <Connect(CustomFees)
        handlePress={[Function]}
        sourceWallet={Object {}}
      />
    </Component>
  </Component>
</SafeAreaViewComponent>
`;

exports[`Change Mining Fees should render with standard props 1`] = `
<SafeAreaViewComponent>
  <Component>
    <Gradient
      style={
        Object {
          "height": 44,
          "position": "absolute",
          "width": "100%",
        }
      }
    />
    <Component
      style={
        Object {
          "paddingHorizontal": 30.788732394366196,
          "paddingVertical": 30.788732394366196,
          "position": "relative",
          "top": 101.60281690140846,
        }
      }
    >
      <Component
        style={
          Object {
            "height": 67.73521126760564,
          }
        }
      >
        <RadioButton
          isSelected={false}
          label="High"
          onPress={[Function]}
          value="high"
        />
      </Component>
      <Component
        style={
          Object {
            "height": 67.73521126760564,
          }
        }
      >
        <RadioButton
          isSelected={true}
          label="Standard"
          onPress={[Function]}
          value="standard"
        />
      </Component>
      <Component
        style={
          Object {
            "height": 67.73521126760564,
          }
        }
      >
        <RadioButton
          isSelected={false}
          label="Low"
          onPress={[Function]}
          value="low"
        />
      </Component>
      <Connect(CustomFees)
        handlePress={[Function]}
        sourceWallet={Object {}}
      />
    </Component>
  </Component>
</SafeAreaViewComponent>
`;
